--- a/impl/client-config/folder-enabler/pom.xml
+++ b/impl/client-config/folder-enabler/pom.xml
@@ -16,7 +16,8 @@
   <dependencies>
     <dependency>
       <groupId>org.osgi</groupId>
-      <artifactId>org.osgi.core</artifactId>
+      <artifactId>osgi.cmpn</artifactId>
+      <version>${osgi.compendium.version}</version>
     </dependency>
     <dependency>
       <groupId>org.osgi</groupId>
